--- a/mobileSoftware/finalReport_02_20220803/app/src/main/AndroidManifest.xml
+++ b/mobileSoftware/finalReport_02_20220803/app/src/main/AndroidManifest.xml
@@ -24,6 +24,11 @@
         <activity android:name=".AddActivity"
             android:exported="false">
         </activity>
+        <activity android:name=".UpdateActivity"
+            android:exported="false">
+        </activity>
+        <activity android:name=".IntroActivity"
+            android:exported="false"/>
     </application>
 
 </manifest>
