--- a/build.gradle
+++ b/build.gradle
@@ -13,26 +13,71 @@ java {
 	}
 }
 
+repositories {
+	mavenCentral()
+}
+
+def querydsl_version = "5.1.0"
+def generated = "src/main/generated"
+
+dependencies {
+	implementation 'com.oracle.database.jdbc:ojdbc11:21.9.0.0'
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.hibernate.orm:hibernate-core:6.0.2.Final'
+	runtimeOnly 'com.mysql:mysql-connector-j:8.2.0'
+
+	// QueryDSL
+	implementation "com.querydsl:querydsl-jpa:${querydsl_version}:jakarta"
+	annotationProcessor "com.querydsl:querydsl-apt:${querydsl_version}:jakarta"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api:3.1.0"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api:2.1.1"
+
+	// lombok
+	compileOnly 'org.projectlombok:lombok:1.18.22'
+	annotationProcessor 'org.projectlombok:lombok:1.18.22'
+
+	// openapi
+	implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
+	implementation 'org.springdoc:springdoc-openapi-data-rest:1.6.9'
+
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
 	}
 }
 
-repositories {
-	mavenCentral()
+sourceSets {
+	main {
+		java {
+			srcDirs = ['src/main/java', generated]
+		}
+	}
 }
 
-dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.mysql:mysql-connector-j'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+tasks.withType(JavaCompile).configureEach {
+	options.annotationProcessorGeneratedSourcesDirectory = file(generated)
 }
 
-tasks.named('test') {
-	useJUnitPlatform()
+// clean 시 Q 클래스 제거
+tasks.named('clean') {
+	doFirst {
+		delete file(generated)
+	}
+}
+
+tasks.register("compileQuerydsl", JavaCompile) {
+	group = "build"
+	description = "Compile Querydsl Q-classes"
+
+	source = fileTree("src/main/java")
+	classpath = sourceSets.main.compileClasspath
+	destinationDirectory.set(file("src/main/generated"))
+
+	options.annotationProcessorPath = configurations.annotationProcessor
 }
