리뷰 작성, 마이페이지 작성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,8 @@ spring:
     username: root
     password: F-wFC#2c<Ixh
     driver-class-name: com.mysql.cj.jdbc.Driver
+  profiles:
+    active : local
   sql:
     init:
       mode: never
