--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.hibernate.orm:hibernate-core:6.0.2.Final'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	runtimeOnly 'com.mysql:mysql-connector-j:8.2.0'
+
+	implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
 
 	// QueryDSL
 	implementation "com.querydsl:querydsl-jpa:${querydsl_version}:jakarta"
