--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,11 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 
+	// jwt
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
 }
 
 configurations {
