--- a/.github/workflows/dev_deploy.yml
+++ b/.github/workflows/dev_deploy.yml
@@ -34,6 +34,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           arguments: build
+          cache-disabled: true
 
       - name: Upload build artifact  # 빌드된 아티팩트 업로드
         uses: actions/upload-artifact@v4
